<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ActionMenuView
        android:id="@+id/actionMenuView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_bar_height"
        android:gravity="left"
        android:background="@color/light_blue_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="@dimen/layout_margin">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:drawableLeft="@drawable/ic_bttn_back"
            android:drawableTint="@color/white_color"
            android:text="@string/bttn_back_lower_str"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:includeFontPadding="false"
            android:textAlignment="center"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/bttn_overview_str"
            android:textAllCaps="false"
            android:includeFontPadding="false"
            android:backgroundTint="@color/black_color" />

    </ActionMenuView>

    <ImageView
        android:id="@+id/content_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_apple_foreground"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionMenuView" />

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:layout_marginHorizontal="@dimen/layout_margin"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        android:layout_margin="@dimen/layout_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/previous_activity_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="@dimen/button_width"
                android:layout_height="64dp"
                android:text="@string/bttn_prev_str"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/bttn_text_fontsize"
                app:backgroundTint="@color/green_color"
                app:icon="@drawable/ic_previous"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:strokeColor="@color/green_color"
                app:strokeWidth="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/next_activity_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="@dimen/button_width"
                android:layout_height="64dp"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:text="@string/bttn_next_str"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/bttn_text_fontsize"
                app:backgroundTint="@color/green_color"
                app:icon="@drawable/ic_bttn_next"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:strokeColor="@color/green_color"
                app:strokeWidth="3dp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/first_activity_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="165dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginVertical="@dimen/layout_margin"
            android:text="@string/bttn_first_page_str"
            android:textAlignment="center"

            android:textAllCaps="false"
            android:textColor="@color/black_color"
            android:textSize="@dimen/bttn_text_fontsize"
            app:backgroundTint="@color/green_color"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:strokeColor="@color/dark_blue_color"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/last_activity_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/layout_margin"

            android:layout_marginVertical="@dimen/layout_margin"
            android:layout_marginTop="20dp"
            android:layoutDirection="rtl"
            android:text="@string/bttn_last_page_str"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black_color"
            android:textSize="@dimen/bttn_text_fontsize"
            app:backgroundTint="@color/green_color"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:strokeColor="@color/dark_blue_color"
            app:strokeWidth="2dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>